fix: 주문 생성 로직 í 및 컨트롤러 통합 및 테스트 수정