@@ -54,14 +54,14 @@ public class OrderControllerCreateTest {
         savedProduct = productService.addProduct("아메리카노", 4500, 1);
     }
 
-    // ==================== ✅ 신규 주문 생성 - 성공 케이스 ====================
+    // ==================== ✅ 주문 생성/명세 추가 - 성공 케이스 ====================
     @Nested
-    @DisplayName("✅ 신규 주문 생성 - 성공 케이스")
-    class CreateNewOrderSuccess {
+    @DisplayName("✅ 주문 생성/명세 추가 - 성공 케이스")
+    class CreateOrderSuccess {
 
         @Test
-        @DisplayName("신규 주문 생성 성공 - Service 비즈니스 로직 정상 수행")
-        void createNewOrder_success_verifyServiceFlow() throws Exception {
+        @DisplayName("새 이메일로 주문 - Order 와 Statement 동시 생성")
+        void createOrder_newEmail_createsOrderAndStatement() throws Exception {
             String testEmail = "new-order@test.com";
             OrderCreateRequestDto requestDto = OrderTestDataFactory.createValidRequestDto(
                     testEmail,
@@ -69,26 +69,108 @@ public class OrderControllerCreateTest {
             );
             String requestJson = objectMapper.writeValueAsString(requestDto);
 
-            mockMvc.perform(post("/api/v1/order/new")
+            mockMvc.perform(post("/api/v1/order")
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(requestJson))
                     .andDo(print())
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$.success").value(true))
+                    .andExpect(jsonPath("$.message").value("성공"))
                     .andExpect(jsonPath("$.data.email").value(testEmail))
-                    .andExpect(jsonPath("$.data.orderId").exists());
+                    .andExpect(jsonPath("$.data.orderId").isNumber())
+                    .andExpect(jsonPath("$.data.createdAt").exists());
 
             // DB 검증
             assertThat(orderRepository.existsByEmail(testEmail)).isTrue();
             CoffeeOrder savedOrder = orderRepository.findByEmail(testEmail)
                     .orElseThrow(() -> new AssertionError("주문이 저장되지 않았습니다"));
             assertThat(savedOrder.getStatements()).hasSize(1);
-            assertThat(savedOrder.getStatements().get(0).getOrderItems()).hasSize(1);
+            assertThat(savedOrder.getStatements().getFirst().getOrderItems()).hasSize(1);
+        }
+
+        @Test
+        @DisplayName("기존 이메일로 주문 - 기존 Order 에 Statement 추가")
+        void createOrder_existingEmail_addsStatementOnly() throws Exception {
+            String testEmail = "existing-order@test.com";
+
+            // 1. 첫 주문 생성
+            OrderCreateRequestDto firstRequest = OrderTestDataFactory.createValidRequestDto(
+                    testEmail,
+                    savedProduct.getId()
+            );
+            mockMvc.perform(post("/api/v1/order")
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(firstRequest)))
+                    .andExpect(status().isOk());
+
+            // 2. 동일 이메일로 명세 추가 (다른 주소)
+            OrderCreateRequestDto secondRequest = OrderTestDataFactory.builder()
+                    .email(testEmail)
+                    .address("부산시 해운대구")
+                    .zipCode("67890")
+                    .clearItems()
+                    .addItem(savedProduct.getId(), 3)
+                    .build();
+
+            String requestJson = objectMapper.writeValueAsString(secondRequest);
+
+            mockMvc.perform(post("/api/v1/order")
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(requestJson))
+                    .andDo(print())
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.success").value(true))
+                    .andExpect(jsonPath("$.message").value("성공"))
+                    .andExpect(jsonPath("$.data.email").value(testEmail));
+
+            // DB 검증: 명세가 2 개 생성되었는지
+            CoffeeOrder savedOrder = orderRepository.findByEmail(testEmail).orElseThrow();
+            assertThat(savedOrder.getStatements()).hasSize(2);
+            assertThat(savedOrder.getStatements().get(1).getOrderItems()).hasSize(1);
+            assertThat(savedOrder.getStatements().get(1).getOrderItems().getFirst().getQuantity()).isEqualTo(3);
+        }
+
+        @Test
+        @DisplayName("동일 이메일 + 동일 주소 - 새 Statement 생성 (비즈니스 규칙)")
+        void createOrder_sameEmailSameAddress_createsNewStatement() throws Exception {
+            String testEmail = "same-address@test.com";
+            String sameAddress = "서울시 강남구";
+            String zipCode = "12345";
+
+            // 1 번째 주문
+            OrderCreateRequestDto firstRequest = OrderTestDataFactory.builder()
+                    .email(testEmail)
+                    .address(sameAddress)
+                    .zipCode(zipCode)
+                    .addItem(savedProduct.getId(), 1)
+                    .build();
+
+            mockMvc.perform(post("/api/v1/order")
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(firstRequest)))
+                    .andExpect(status().isOk());
+
+            // 2 번째 주문 (동일 주소)
+            OrderCreateRequestDto secondRequest = OrderTestDataFactory.builder()
+                    .email(testEmail)
+                    .address(sameAddress)
+                    .zipCode(zipCode)
+                    .addItem(savedProduct.getId(), 2)
+                    .build();
+
+            mockMvc.perform(post("/api/v1/order")
+                            .contentType(MediaType.APPLICATION_JSON)
+                            .content(objectMapper.writeValueAsString(secondRequest)))
+                    .andExpect(status().isOk());
+
+            // DB 검증: 명세가 2 개 생성되었는지 (비즈니스 규칙에 따라 다름)
+            CoffeeOrder savedOrder = orderRepository.findByEmail(testEmail).orElseThrow();
+            assertThat(savedOrder.getStatements()).hasSize(2);  // 새 명세 생성 정책
         }
 
         @Test
         @DisplayName("다중 주문 항목 - Service 반복 로직 검증")
-        void createNewOrder_success_withMultipleItems() throws Exception {
+        void createOrder_success_withMultipleItems() throws Exception {
             Product product2 = productRepository.save(new Product("카페라떼", 5000, 2));
             Product product3 = productRepository.save(new Product("카푸치노", 5500, 3));
 
@@ -102,132 +184,26 @@ public class OrderControllerCreateTest {
 
             String requestJson = objectMapper.writeValueAsString(requestDto);
 
-            mockMvc.perform(post("/api/v1/order/new")
+            mockMvc.perform(post("/api/v1/order")
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(requestJson))
-                    .andExpect(status().isOk())
-                    .andExpect(jsonPath("$.success").value(true));
-
-            // Service 의 for 문 로직이 모든 항목을 처리했는지 검증
-            CoffeeOrder savedOrder = orderRepository.findByEmail("multi-item@test.com").orElseThrow();
-            assertThat(savedOrder.getStatements().get(0).getOrderItems()).hasSize(3);
-        }
-    }
-
-    // ==================== ✅ 기존 주문에 명세 추가 - 성공 케이스 ====================
-    @Nested
-    @DisplayName("✅ 기존 주문에 명세 추가 - 성공 케이스")
-    class AddStatementToExistingOrderSuccess {
-
-        @Test
-        @DisplayName("기존 주문에 명세 추가 성공")
-        void addStatement_success_verifyServiceFlow() throws Exception {
-            // 1. 먼저 신규 주문 생성
-            String testEmail = "existing-order@test.com";
-            OrderCreateRequestDto firstRequest = OrderTestDataFactory.createValidRequestDto(
-                    testEmail,
-                    savedProduct.getId()
-            );
-            mockMvc.perform(post("/api/v1/order/new")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(firstRequest)))
-                    .andExpect(status().isOk());
-
-            OrderCreateRequestDto secondRequest = OrderTestDataFactory.builder()
-                    .email(testEmail)
-                    .address("부산시 해운대구")
-                    .zipCode("67890")
-                    .clearItems()
-                    .addItem(savedProduct.getId(), 3)
-                    .build();
-
-            String requestJson = objectMapper.writeValueAsString(secondRequest);
-
-            mockMvc.perform(post("/api/v1/order/statement")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(requestJson))
-                    .andDo(print())
                     .andExpect(status().isOk())
                     .andExpect(jsonPath("$.success").value(true))
-                    .andExpect(jsonPath("$.data.address").value("부산시 해운대구"))
-                    .andExpect(jsonPath("$.data.zipCode").value("67890"));
+                    .andExpect(jsonPath("$.message").value("성공"));
 
-
-            CoffeeOrder savedOrder = orderRepository.findByEmail(testEmail).orElseThrow();
-            assertThat(savedOrder.getStatements()).hasSize(2); // 명세 2 개
-            assertThat(savedOrder.getStatements().get(1).getOrderItems()).hasSize(1);
-            assertThat(savedOrder.getStatements().get(1).getOrderItems().get(0).getQuantity()).isEqualTo(3);
-        }
-
-        @Test
-        @DisplayName("기존 주문에 여러 명세 추가")
-        void addStatement_success_multipleStatements() throws Exception {
-            String testEmail = "multi-statement@test.com";
-
-            OrderCreateRequestDto firstRequest = OrderTestDataFactory.createValidRequestDto(
-                    testEmail,
-                    savedProduct.getId()
-            );
-            mockMvc.perform(post("/api/v1/order/new")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(firstRequest)))
-                    .andExpect(status().isOk());
-
-            for (int i = 0; i < 2; i++) {
-                OrderCreateRequestDto addRequest = OrderTestDataFactory.builder()
-                        .email(testEmail)
-                        .address("주소 " + i)
-                        .zipCode("12345")
-                        .clearItems()
-                        .addItem(savedProduct.getId(), 1)
-                        .build();
-
-                mockMvc.perform(post("/api/v1/order/statement")
-                                .contentType(MediaType.APPLICATION_JSON)
-                                .content(objectMapper.writeValueAsString(addRequest)))
-                        .andExpect(status().isOk());
-            }
-
-            // DB 검증
-            CoffeeOrder savedOrder = orderRepository.findByEmail(testEmail).orElseThrow();
-            assertThat(savedOrder.getStatements()).hasSize(3); // 초기 1 + 추가 2
+            CoffeeOrder savedOrder = orderRepository.findByEmail("multi-item@test.com").orElseThrow();
+            assertThat(savedOrder.getStatements().getFirst().getOrderItems()).hasSize(3);
         }
     }
 
-    // ==================== ❌ 신규 주문 생성 - 실패 케이스 ====================
+    // ==================== ❌ 주문 생성 - 실패 케이스 ====================
     @Nested
-    @DisplayName("❌ 신규 주문 생성 - 실패 케이스")
-    class CreateNewOrderFail {
-
-        @Test
-        @DisplayName("중복 이메일 - 400 Bad Request")
-        void createNewOrder_fail_duplicateEmail() throws Exception {
-            String duplicateEmail = "duplicate@test.com";
-
-            OrderCreateRequestDto firstRequest = OrderTestDataFactory.createValidRequestDto(
-                    duplicateEmail,
-                    savedProduct.getId()
-            );
-            mockMvc.perform(post("/api/v1/order/new")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(firstRequest)))
-                    .andExpect(status().isOk());
-
-            OrderCreateRequestDto secondRequest = OrderTestDataFactory.createValidRequestDto(
-                    duplicateEmail,
-                    savedProduct.getId()
-            );
-            mockMvc.perform(post("/api/v1/order/new")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(secondRequest)))
-                    .andExpect(status().isBadRequest())
-                    .andExpect(jsonPath("$.success").value(false))
-                    .andExpect(jsonPath("$.message").value("이미 주문된 이메일입니다"));
-        }
+    @DisplayName("❌ 주문 생성 - 실패 케이스")
+    class CreateOrderFail {
 
         @Test
         @DisplayName("존재하지 않는 상품 - 400 Bad Request")
-        void createNewOrder_fail_nonExistentProduct() throws Exception {
+        void createOrder_fail_nonExistentProduct() throws Exception {
             OrderCreateRequestDto requestDto = OrderTestDataFactory.builder()
                     .email("product-error@test.com")
                     .clearItems()
@@ -236,61 +212,9 @@ public class OrderControllerCreateTest {
 
             String requestJson = objectMapper.writeValueAsString(requestDto);
 
-            mockMvc.perform(post("/api/v1/order/new")
+            mockMvc.perform(post("/api/v1/order")
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(requestJson))
-                    .andExpect(status().isBadRequest())
-                    .andExpect(jsonPath("$.success").value(false))
-                    .andExpect(jsonPath("$.message").value("상품을 찾을 수 없습니다: 99999"));
-        }
-    }
-
-    // ==================== ❌ 기존 주문 명세 추가 - 실패 케이스 ====================
-    @Nested
-    @DisplayName("❌ 기존 주문 명세 추가 - 실패 케이스")
-    class AddStatementFail {
-
-        @Test
-        @DisplayName("존재하지 않는 이메일 - 400 Bad Request")
-        void addStatement_fail_nonExistentEmail() throws Exception {
-            OrderCreateRequestDto requestDto = OrderTestDataFactory.createValidRequestDto(
-                    "nonexistent@test.com",
-                    savedProduct.getId()
-            );
-
-            String requestJson = objectMapper.writeValueAsString(requestDto);
-
-            mockMvc.perform(post("/api/v1/order/statement")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(requestJson))
-                    .andExpect(status().isBadRequest())
-                    .andExpect(jsonPath("$.success").value(false))
-                    .andExpect(jsonPath("$.message").value("주문을 찾을 수 없습니다: nonexistent@test.com"));
-        }
-
-        @Test
-        @DisplayName("존재하지 않는 상품 - 400 Bad Request")
-        void addStatement_fail_nonExistentProduct() throws Exception {
-            String testEmail = "statement-product-error@test.com";
-
-            OrderCreateRequestDto firstRequest = OrderTestDataFactory.createValidRequestDto(
-                    testEmail,
-                    savedProduct.getId()
-            );
-            mockMvc.perform(post("/api/v1/order/new")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(firstRequest)))
-                    .andExpect(status().isOk());
-
-            OrderCreateRequestDto secondRequest = OrderTestDataFactory.builder()
-                    .email(testEmail)
-                    .clearItems()
-                    .addDefaultItem(99999)
-                    .build();
-
-            mockMvc.perform(post("/api/v1/order/statement")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(secondRequest)))
                     .andExpect(status().isBadRequest())
                     .andExpect(jsonPath("$.success").value(false))
                     .andExpect(jsonPath("$.message").value("상품을 찾을 수 없습니다: 99999"));
@@ -310,7 +234,7 @@ public class OrderControllerCreateTest {
 
             String requestJson = objectMapper.writeValueAsString(requestDto);
 
-            mockMvc.perform(post("/api/v1/order/new")
+            mockMvc.perform(post("/api/v1/order")
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(requestJson))
                     .andExpect(status().isBadRequest())
@@ -326,7 +250,7 @@ public class OrderControllerCreateTest {
 
             String requestJson = objectMapper.writeValueAsString(requestDto);
 
-            mockMvc.perform(post("/api/v1/order/new")
+            mockMvc.perform(post("/api/v1/order")
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(requestJson))
                     .andExpect(status().isBadRequest())
@@ -342,7 +266,7 @@ public class OrderControllerCreateTest {
 
             String requestJson = objectMapper.writeValueAsString(requestDto);
 
-            mockMvc.perform(post("/api/v1/order/new")
+            mockMvc.perform(post("/api/v1/order")
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(requestJson))
                     .andExpect(status().isBadRequest())
@@ -366,17 +290,17 @@ public class OrderControllerCreateTest {
                     savedProduct.getId()
             );
 
-            mockMvc.perform(post("/api/v1/order/new")
+            mockMvc.perform(post("/api/v1/order")
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(objectMapper.writeValueAsString(request)))
                     .andExpect(status().isOk());
 
-            // 테스트 내에서는 증가 확인
+            // 테스트 내에서는 증가 확인 (롤백되므로 실제 DB 는 변하지 않음)
             assertThat(orderRepository.count()).isEqualTo(beforeCount + 1);
         }
 
         @Test
-        @DisplayName("명세 삭제 후 주문 자동 삭제 검증")
+        @DisplayName("명세 삭제 후 주문 자동 삭제 검증 (orphanRemoval)")
         void removeStatement_verifyOrderAutoDelete() throws Exception {
             String testEmail = "delete-test@test.com";
 
@@ -384,19 +308,20 @@ public class OrderControllerCreateTest {
                     testEmail,
                     savedProduct.getId()
             );
-            mockMvc.perform(post("/api/v1/order/new")
+            mockMvc.perform(post("/api/v1/order")
                             .contentType(MediaType.APPLICATION_JSON)
                             .content(objectMapper.writeValueAsString(createRequest)))
                     .andExpect(status().isOk());
 
             CoffeeOrder savedOrder = orderRepository.findByEmail(testEmail).orElseThrow();
             int orderId = savedOrder.getId();
-            int statementId = savedOrder.getStatements().get(0).getId();
+            int statementId = savedOrder.getStatements().getFirst().getId();
 
             mockMvc.perform(org.springframework.test.web.servlet.request.MockMvcRequestBuilders
                             .delete("/api/v1/order/{orderId}/statement/{orderStatementId}", orderId, statementId))
                     .andExpect(status().isNoContent());
 
+            // orphanRemoval + @OneToMany 에서 마지막 명세 삭제 시 주문도 삭제됨
             assertThat(orderRepository.findById(orderId)).isEmpty();
         }
     }
